added python script

--- a/Python Likelihood.ipynb
+++ b/Python Likelihood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-40.74413049422305"
+       "-40.74962378688293"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,9 +30,10 @@
     "# First element of the list is the command I want to execute, all the other elements are arguments\n",
     "command = [\"./is_moments\", \"growing/gtree_file1\", \"1\", \"5000\", \"paramfile\", \"1\"]\n",
     "# Notice we can't run something like \"cd SimulationCode; ./is_moments \" etc because cd is a shell internal.\n",
-    "# Instead, we change directly\n",
-    "out = log(float(check_output(command, cwd=\"SimulationCode/\")))\n",
-    "out"
+    "# Instead, we change directory just before executing the program \n",
+    "# https://stackoverflow.com/questions/21406887/subprocess-changing-directory\n",
+    "loglike = log(float(check_output(command, cwd=\"SimulationCode/\")))\n",
+    "loglike"
    ]
   },
   {
