likelihood function working

--- a/Python Likelihood.ipynb
+++ b/Python Likelihood.ipynb
@@ -38,10 +38,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from SimulationCode.likelihood_functions import site_loglike"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-40.87149372336238"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "params = np.array([4.605170000000000, 2.995732000000000, -2.302585000000000])\n",
+    "site_loglike(1, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "full_lo"
+   ]
   }
  ],
  "metadata": {
