added various notebooks and did some changes to tractble simulator. Not sure

--- a/Python Likelihood.ipynb
+++ b/Python Likelihood.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check Likelihood Works"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-40.74962378688293"
+       "-41.194280018629705"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,8 +44,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check Likelihood can be Imported"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-40.87149372336238"
+       "-41.083141482300874"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,13 +82,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metropolis-Hastings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose a Gaussian Proposal.\n",
+    "\n",
+    "$$\n",
+    "\\alpha(\\theta_{\\text{cand}}, \\theta^{(i-1)}) = \\min\\left\\{1, \\frac{q(\\theta^{(i-1)} \\mid \\theta_{\\text{cand}}) \\pi(\\theta_{\\text{cand}} \\mid D)}{q(\\theta_{\\text{cand}} \\mid \\theta^{(i-1)}) \\pi(\\theta^{(i-1)} \\mid D)}\\right\\} = \\min\\left\\{1, \\frac{q(\\theta^{(i-1)} \\mid \\theta_{\\text{cand}}) p(D \\mid \\theta_{\\text{cand}}) \\pi\n",
+    "(\\theta_{\\text{cand}})}{q(\\theta_{\\text{cand}} \\mid \\theta^{(i-1)}) p(D \\mid \\theta^{(i-1)}) \\pi(\\theta^{(i-1)})}\\right\\}\n",
+    "$$\n",
+    "\n",
+    "In the log scale this becomes\n",
+    "\n",
+    "$$\n",
+    "\\min\\left\\{0, \\log q(\\theta^{(i-1)} \\mid \\theta_{\\text{cand}}) + \\log p(D \\mid \\theta_{\\text{cand}}) + \\log \\pi\n",
+    "(\\theta_{\\text{cand}}) - \\log \\right\\}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy.random import normal\n",
+    "from scipy.stats import norm\n",
+    "q = norm(loc=0.0, scale=1.0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "full_lo"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -97,5 +146,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
